--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -180,9 +180,8 @@
                                     </h6>
                                     
                                     <div class="row">
-                                        <!-- Configuration Column -->
-                                        <div class="col-md-12">
-                                            <!-- Force On -->
+                                        <!-- Force On Column -->
+                                        <div class="col-md-6">
                                             <div class="mb-3">
                                                 <div class="form-check form-switch">
                                                     <input class="form-check-input" 
@@ -195,8 +194,10 @@
                                                     When enabled, this disables all scheduling and makes the tracker stay on permanently.
                                                 </div>
                                             </div>
+                                        </div>
 
-                                            <!-- Button Delay -->
+                                        <!-- Button Delay Column -->
+                                        <div class="col-md-6">
                                             <div class="mb-3">
                                                 <label class="form-label">Button Delay (HH:MM)</label>
                                                 <input type="text" 
