--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,11 +15,13 @@
     <link href="{{ url_for('static', path='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', path='vendor/leaflet/css/leaflet.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', path='vendor/leaflet-locate/css/L.Control.Locate.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', path='vendor/leaflet-vector-markers/css/leaflet-vector-markers.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', path='vendor/fontawesome/css/all.min.css') }}">
     <link href="{{ url_for('static', path='css/style.css') }}" rel="stylesheet">
     
     <!-- Common JS -->
     <script src="{{ url_for('static', path='vendor/leaflet/js/leaflet.js') }}"></script>
+    <script src="{{ url_for('static', path='vendor/leaflet-vector-markers/js/leaflet-vector-markers.min.js') }}"></script>
     <script src="{{ url_for('static', path='vendor/leaflet-locate/js/L.Control.Locate.min.js') }}"></script>
     <script src="{{ url_for('static', path='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     
